--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -28,7 +28,7 @@
     <!-- Recursos -->
     <link rel="icon" type="image/png" href="/images/logomt.jpg"/>
     <link rel="shortcut icon" type="image/x-icon" href="/images/logomt.jpg"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://yizack.com/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic"/>
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/emoji.css"/> <!-- https://afeld.github.io/emoji-css/ -->
