--- a/_layouts/fanlink_list.html
+++ b/_layouts/fanlink_list.html
@@ -4,25 +4,28 @@
     <title>{{ page.title }}</title>
     <!-- Metadatos -->
     <meta charset="utf-8">
+    <meta name="theme-color" content="#1d1d1d"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="robots" content="index,follow"/>
     <meta name="keywords" content="fanlinks,music,deep,house,electronic"/>
     <meta name="description" content="{{ page.description }}"/>
+
     <!-- Protocolo Open Graph -->
     <meta property="og:url" content="{{ site.url }}/{{ page.link }}"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="{{ page.title }}"/>
-    <meta property="og:site_name" content="Dimatis"/>
+    <meta property="og:site_name" content="Bayza Fanlinks"/>
     <meta property="og:image" content="{{ page.image }}"/>
-    <meta property="og:image:secure_url" content="{{ page.image_secure }}"/>
     <meta property="og:image:alt" content="{{ page.title }}"/>
     <meta property="og:description" content="{{ page.description }}"/>
+
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:image" content="{{ page.image_secure }}"/>
     <meta name="twitter:title" content="{{ page.title }}"/>
     <meta name="twitter:description" content="{{ page.description }}"/>
     <meta name="twitter:site" content="@bayzamusic"/>
+    
     <!-- Recursos -->
     <link rel="icon" type="image/png" href="/images/logomt.jpg"/>
     <link rel="shortcut icon" type="image/x-icon" href="/images/logomt.jpg"/>
