--- a/_layouts/fanlink_list.html
+++ b/_layouts/fanlink_list.html
@@ -25,7 +25,7 @@
     <meta name="twitter:title" content="{{ page.title }}"/>
     <meta name="twitter:description" content="{{ page.description }}"/>
     <meta name="twitter:site" content="@bayzamusic"/>
-    
+
     <!-- Recursos -->
     <link rel="icon" type="image/png" href="/images/logomt.jpg"/>
     <link rel="shortcut icon" type="image/x-icon" href="/images/logomt.jpg"/>
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="/css/links.css" />
   </head>
   <body class="bg-dark">
-    <div class="bg-image" style="background-image: url('{{ page.background }}')"></div>
+    <div class="bg-image-list" style="background-image: url('{{ page.background }}')"></div>
     <div class="container text-white">
       <div class="row">{% assign sorted = site.pages | sort: 'date' | reverse %}{% for item in sorted %}{% if item.artists %}
         <div class="mx-auto col-lg-4">
