--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -27,7 +27,7 @@
     <meta name="twitter:title" content="{{ page.title }}"/>
     <meta name="twitter:description" content="{{ page.artists }}"/>
     <meta name="twitter:site" content="@bayzamusic"/>
-    
+
     <!-- Recursos -->
     <link rel="icon" type="image/png" href="/images/logomt.jpg"/>
     <link rel="shortcut icon" type="image/x-icon" href="/images/logomt.jpg"/>
@@ -46,7 +46,7 @@
             <div class="row">
               <div class="col-lg-12">
                 <!-- cover -->
-                <img class="img-fluid mx-auto d-block" src="{{ page.image_secure }}" width="100%">
+                <img class="img-fluid mx-auto d-block img-select-none" src="{{ page.image_secure }}" width="100%">
                 <!-- titulo -->
                 <div class="p-4">
                   <div class="text-center">
