--- a/css/bayza.css
+++ b/css/bayza.css
@@ -230,7 +230,7 @@ footer .instagram a:hover {
     background: #151515!important
 }
 
-a img, .img-fx{
+a img, .img-fx, .img-select-none{
     -webkit-user-select: none;  /* Chrome all / Safari all */
     -moz-user-select: none;     /* Firefox all */
     -ms-user-select: none;      /* IE 10+ */
