--- a/css/links.css
+++ b/css/links.css
@@ -75,3 +75,15 @@ ul.icons li {
   display: inline-block;
   padding: 0 1em 0 0;
 }
+
+.img-select-none {
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;          /* Likely future */  
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
