--- a/_layouts/fanlink_list.html
+++ b/_layouts/fanlink_list.html
@@ -48,7 +48,7 @@
                 <!-- titulo -->
                 <div class="p-3">
                   <div class="text-center">
-                    <h5><b>{{ item.title }}</b></h5>
+                    <h5>{{ item.title }}</h5>
                     <h6 class="mb-0">{{ item.artists }}</h6>
                   </div>
                 </div>
