--- a/_layouts/fanlink_list.html
+++ b/_layouts/fanlink_list.html
@@ -29,7 +29,7 @@
     <!-- Recursos -->
     <link rel="icon" type="image/png" href="/images/logomt.jpg"/>
     <link rel="shortcut icon" type="image/x-icon" href="/images/logomt.jpg"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://yizack.com/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic"/>
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/emoji.css"/> <!-- https://afeld.github.io/emoji-css/ -->
@@ -48,7 +48,7 @@
                 <!-- titulo -->
                 <div class="p-3">
                   <div class="text-center">
-                    <h5>{{ item.title }}</h5>
+                    <h5><b>{{ item.title }}</b></h5>
                     <h6 class="mb-0">{{ item.artists }}</h6>
                   </div>
                 </div>
