--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,9 @@
         <a class="nav-link" href="/#music">Music</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/fanlinks">Fanlinks</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/#about">About</a>
       </li>       
       </ul>
