--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -98,28 +98,7 @@
     </script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark px-5 py-1 fixed-top smart-scroll">
-      <a class="navbar-brand" href="/"><i class="icon-bayza"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/releases">Releases</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#music">Music</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/#about">About</a>
-        </li>       
-        </ul>
-      </div>  
-    </nav>
+    {% include navbar.html %}
     <section id="dark" class="cabecera text-dark py-5">
       <div class="container pt-4 cabecera-adjust" style="overflow-x: hidden;">
         <div class="row">
