--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -186,7 +186,7 @@
               </div>
               <h5 class="mt-3 text-uppercase font-weight-light">Spotify</h5>
               <div>
-                <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:0UFz5jBFwlNKaq1JwESYnX&size=detail&theme=dark" width="210" height="56"></iframe>
+                <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:0UFz5jBFwlNKaq1JwESYnX&size=detail&theme=dark" width="215" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
               </div>
               <br/>
               <div>
