--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -38,12 +38,7 @@
     <meta name="twitter:site" content="@bayzamusic"/>
 
     <!-- Recursos -->
-    <link rel="icon" href="/images/logomt.jpg"/>
-    <link rel="shortcut icon" href="/images/logomt.jpg"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/fontello-embedded.css">
-    <link rel="stylesheet" href="/css/bayza.css"/>
-    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
+    {% include resources.html %}
     <link rel="canonical" href="https://bayzamusic.com/releases/{{ release.year }}{{ page.link }}/{{ release.release }}"/>
     <script type="application/ld+json">
       {   
@@ -58,7 +53,7 @@
         "byArtist": [
           {
             "@type": "MusicGroup",
-            "name": "{{ release.artist }}"
+            "name": "{{ release.artists }}"
           }
         ]
       }
