--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -29,13 +29,8 @@
     <meta name="twitter:site" content="@bayzamusic"/>
     
     <!-- Recursos -->
-    <link rel="icon" href="/images/logomt.jpg"/>
-    <link rel="shortcut icon" href="/images/logomt.jpg"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/fontello-embedded.css">
-    <link rel="stylesheet" href="/css/bayza.css"/>
-    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-    <link rel="canonical" href="https://bayzamusic.com/releases/{{ page.year }}{{ page.link }}"/>
+    {% include resources.html %}
+    <link rel="canonical" href="https://bayzamusic.com/releases/{{ page.year }}{{ page.link }}"/> 
   </head>
 
   </body>
