--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -151,6 +151,21 @@
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container" data-aos="zoom-in">
+                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2020/reborn.jpg">
+                  <div class="centered">
+                    <h4>Upcoming</h4>
+                    <small><h5>Oct 22, 2020</h5></small>
+                  </div>
+                </div>
+                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mb-0 mt-2">Reborn</p></small></h5>
+                  <small><p class="mb-4" data-aos="fade-left">Bayza & Dimatis</p></small>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-lg-3">
+            <div class="item">
+              <div class="cover">
+                <div class="upcoming-container" data-aos="zoom-in">
                   <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2020/no-guarantee.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
