source code and idents omptimization

--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -29,12 +29,11 @@
     <meta name="twitter:site" content="@bayzamusic"/>
     
     <!-- Recursos -->
-    {% include resources.html %}
+{% include resources.html %}
     <link rel="canonical" href="https://bayzamusic.com/releases/{{ page.year }}{{ page.link }}"/> 
   </head>
-
-  </body>
-  {% include navbar.html %}
+  <body>
+{% include navbar.html %}
     <section id="releases" class="bg-darkest-est">
       <div class="container text-secondary text-center py-5">
         <h3 class="mt-5 text-uppercase text-white">{{ page.extra }} {{ page.type }}</h3>
@@ -55,7 +54,7 @@
         </div>
       </div>
     </section>
-    {% include footer.html %}
-    {% include scripts.html %}
+{% include footer.html %}
+{% include scripts.html %}
   </body>
 </html>
