--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -28,12 +28,11 @@
     <meta name="twitter:site" content="@bayzamusic"/>
     
     <!-- Recursos -->
-    {% include resources.html %}
+{% include resources.html %}
     <link rel="canonical" href="https://bayzamusic.com/releases"/>
   </head>
-
-  </body>
-    {% include navbar.html %}
+  <body>
+{% include navbar.html %}
     <section id="releases" class="bg-darkest-est">
       <div class="container text-secondary text-center py-5" style="overflow-x: hidden;">
         <h3 class="mt-5 text-uppercase text-white" data-aos="fade-right">Official Releases</h3>
