--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -30,7 +30,7 @@
     <meta name="twitter:site" content="@bayzamusic"/>
 
     <!-- Recursos -->
-    {% include resources.html %}
+{% include resources.html %}
     <link rel="canonical" href="https://bayzamusic.com/"/>
     <script type="application/ld+json">
       {
@@ -91,7 +91,7 @@
     </script>
   </head>
   <body>
-    {% include navbar.html %}
+{% include navbar.html %}
     <section id="dark" class="cabecera text-dark py-5">
       <div class="container pt-4 cabecera-adjust" style="overflow-x: hidden;">
         <div class="row">
@@ -121,13 +121,10 @@
             <div class="col-12 col-md-5 d-none d-md-block portfolio-block block-intro">
               <div class="avatar" data-aos="zoom-in" style="background-image:url('https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg'); width:100px; height:100px; border-radius:0px"></div>
             </div>
-            
-            </a>
           </div>
         </div>
       </div>
     </section>
-
     <section id="latest releases" class="bg-darkest">
       <div class="container text-secondary py-5 text-center" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Latest Music</h3>
@@ -176,8 +173,7 @@
                   <small><p class="mb-4" data-aos="fade-left">Bayza</p></small>
               </div>
             </div>
-          </div>
-          {% for item in sorted %}
+          </div>{% for item in sorted %}
           <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
@@ -194,7 +190,6 @@
         <a class="btn btn-outline-releases px-4 py-1" href="/releases" data-aos="flip-left">See more</a>
       </div>
     </section>
-
     <section id="music" class="bg-dark text-secondary text-center py-5">
       <div class="container" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Music</h3>
@@ -307,8 +302,8 @@
         </div>
       </div>
     </section>
-    {% include footer.html %}
-    {% include scripts.html %}
+{% include footer.html %}
+{% include scripts.html %}
     <script>
       $(document).ready(function(){
         $("#button1").click(function(){
