--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -38,7 +38,7 @@
     <meta name="twitter:site" content="@bayzamusic"/>
 
     <!-- Recursos -->
-    {% include resources.html %}
+{% include resources.html %}
     <link rel="canonical" href="https://bayzamusic.com/releases/{{ release.year }}{{ page.link }}/{{ release.release }}"/>
     <script type="application/ld+json">
       {   
@@ -59,9 +59,8 @@
       }
     </script>
   </head>
-
-  </body>
-  {% include navbar.html %}
+  <body>
+{% include navbar.html %}
     <section id="releases" class="bg-darkest-est">
         <div class="container text-secondary text-center py-3 px-3">
           <h3 class="mt-5 text-uppercase text-white">{{ release.title }}</h3>
@@ -81,29 +80,23 @@
             <div class="col-12 col-md-4 meta text-justify">
               <div class="tags">
                 <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Genre:</span></h5>
-                <h6 class="mb-2"><span class="tag">{{ release.genre }}</span></h6>
-                {% if release.album %}
+                <h6 class="mb-2"><span class="tag">{{ release.genre }}</span></h6>{% if release.album %}
                 <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Album:</span></h5>
-                <h6 class="mb-2"><span class="tag">{{ release.album }}</span></h6>
-                {% endif %}
-                {% if release.label %}
+                <h6 class="mb-2"><span class="tag">{{ release.album }}</span></h6>{% endif %}{% if release.label %}
                 <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Label:</span></h5>
-                <h6 class="mb-2"><span class="tag">{{ release.label }}</span></h6>
-                {% endif %}
+                <h6 class="mb-2"><span class="tag">{{ release.label }}</span></h6>{% endif %}
                 <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Release date:</span></h5>
                 <h6 class="mb-2"><span class="tag">{{ release.date | date_to_string: "ordinal", "US" }}</span></h6>
                 <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Duration:</span></h5>
-                <h6 class="mb-2"><span class="tag">{{ release.duration }}</span></h6>
-                {% if release.fanlink %}
+                <h6 class="mb-2"><span class="tag">{{ release.duration }}</span></h6>{% if release.fanlink %}
                 <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Stream/Download:</span></h5>
-                <h6 class="mb-2"><span><a class="tag" target="_blank" href="https://{{ release.fanlink }}">{{ release.fanlink }} <i class="fas fa-external-link-alt"></i></a></span></h6>
-                {% endif %}
+                <h6 class="mb-2"><span><a class="tag" target="_blank" href="https://{{ release.fanlink }}">{{ release.fanlink }} <i class="fas fa-external-link-alt"></i></a></span></h6>{% endif %}
               </div>
             </div>
           </div>
         </div>
       </section>
-      {% include footer.html %}
-      {% include scripts.html %}
+{% include footer.html %}
+{% include scripts.html %}
   </body>
 </html>
