--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -95,25 +95,25 @@
     <section id="dark" class="cabecera text-white py-5">
       <div class="container pt-4 cabecera-adjust" style="overflow-x: hidden;">
         <div class="row">
-          <div class="col-12 col-md-6 text-left d-none d-lg-block" data-aos="fade-right" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="1500">
+          <div class="col-12 col-md-6 text-left d-none d-md-block" data-aos="fade-right" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="1500">
             <h1 class="display-4 mt-3 text-uppercase">Bayza</h1>
             <h4 class="my-3 font-weight-light">Panamanian music producer</h4>
             <h5 class="mb-4 font-weight-light"><span>Contact: </span><a class="text-white" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></h5>
           </div>
-          <div class="col-12 col-md-12 text-center d-block d-lg-none">
+          <div class="col-12 col-md-12 text-center d-block d-md-none">
             <h1 class="display-4 mt-3 text-uppercase " data-aos="zoom-in">Bayza</h1>
             <h4 class="my-3 font-weight-light" data-aos="fade-left">Panamanian music producer</h4>
             <small><p class="mb-4" data-aos="fade-right"><span>Contact: </span><a class="text-white" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></p></small>
           </div>
           <div class="col-12 col-md-6 row mt-4 text-right" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="1500">
-            <div class="col-12 col-md-8 d-none d-lg-block mt-2">
+            <div class="col-12 col-md-8 d-none d-md-block mt-2">
               <h3>Latest Release:</h3>
               <a target="_blank" class="text-white" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}">
               <h5 class="font-weight-light">{{ releases.last.title }} <i class="fas fa-external-link-alt"></i></h5></a>
               <div><h5 class="font-weight-light" >by: {{ releases.last.artists }}</h5></div>
               <small><p class="mb-4 mt-1">{{ releases.last.date | date: "%b %-d, %Y" }}</p></small>
             </div>
-            <div class="col-12 col-md-4 d-none d-lg-block portfolio-block block-intro mt-2">
+            <div class="col-12 col-md-4 d-none d-md-block portfolio-block block-intro mt-2">
               <div class="avatar mt-1" style="background-image:url('https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg'); width:120px; height:120px; border-radius:0px"></div>
             </div>
           </div>
