background colors update

--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -61,7 +61,7 @@
   </head>
   <body>
 {% include navbar.html %}
-    <section id="releases" class="bg-darkest-est">
+    <section id="releases" class="bg-darkest">
         <div class="container text-secondary text-center py-3 px-3">
           <h3 class="mt-5 text-uppercase text-white">{{ release.title }}</h3>
           <h4 class="font-weight-light mb-0">{{ release.artists }}</h4>
