--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -34,7 +34,7 @@
   </head>
   <body>
 {% include navbar.html %}
-    <section id="releases" class="bg-darkest-est">
+    <section id="releases" class="bg-darkest">
       <div class="container text-secondary text-center py-5">
         <h3 class="mt-5 text-uppercase text-white">{{ page.extra }} {{ page.type }}</h3>
         <h4 class="font-weight-light">{{ page.year }}</h4>
