--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -33,7 +33,7 @@
   </head>
   <body>
 {% include navbar.html %}
-    <section id="releases" class="bg-darkest-est">
+    <section id="releases" class="bg-dark">
       <div class="container text-secondary text-center py-5" style="overflow-x: hidden;">
         <h3 class="mt-5 text-uppercase text-white" data-aos="fade-right">Official Releases</h3>
         <h4 class="font-weight-light" data-aos="fade-left">by year</h4>
