--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -90,7 +90,7 @@
       }
     </script>
   </head>
-  <body class="bg-darkest">
+  <body>
 {% include navbar.html %}
     <section id="dark" class="cabecera text-white py-5">
       <div class="container pt-4 cabecera-adjust" style="overflow-x: hidden;">
