--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -100,10 +100,10 @@
             <h4 class="my-3 font-weight-light">Panamanian music producer</h4>
             <h5 class="mb-4 font-weight-light"><span>Contact: </span><a class="text-white" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></h5>
           </div>
-          <div class="col-12 col-md-12 text-center d-block d-md-none">
-            <h1 class="display-4 mt-3 text-uppercase " data-aos="zoom-in">Bayza</h1>
-            <h4 class="my-3 font-weight-light" data-aos="fade-left">Panamanian music producer</h4>
-            <small><p class="mb-4" data-aos="fade-right"><span>Contact: </span><a class="text-white" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></p></small>
+          <div class="col-12 col-md-12 text-center d-block d-md-none" data-aos="zoom-in" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="1500">
+            <h1 class="display-4 mt-3 text-uppercase">Bayza</h1>
+            <h4 class="my-3 font-weight-light">Panamanian music producer</h4>
+            <small><p class="mb-4"><span>Contact: </span><a class="text-white" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a></p></small>
           </div>
           <div class="col-12 col-md-6 row mt-4 text-right" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="1500">
             <div class="col-12 col-md-8 d-none d-md-block mt-2">
