--- a/css/bayza.css
+++ b/css/bayza.css
@@ -342,6 +342,15 @@ b a:hover {
     margin-bottom: 19rem;
     margin-top: 20rem;
 }
+
+@media only screen and (max-width: 1366px){
+    .cabecera-adjust{
+        padding-bottom: 0;
+        margin-bottom: 9rem;
+        margin-top: 11rem;
+    }
+}
+
 @media only screen and (max-width: 767px){
     .cabecera-adjust{
         padding-bottom: 0;
