--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,7 @@
     <nav class="navbar navbar-expand-md bg-darkest navbar-dark px-5 py-2 fixed-top smart-scroll">
-      <a class="navbar-brand" href="/"><i class="icon-bayza"></i></a>
+      <a class="navbar-brand" href="/">
+        <img src="/svg/bayza-logo.svg" width="100">
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
