--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -109,7 +109,7 @@
             <div class="col-12 col-md-8 d-none d-md-block mt-2 pr-0">
               <h3>Latest Release:</h3>
               <a target="_blank" class="text-white" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}">
-              <h5 class="font-weight-light">{{ releases.last.title }} <i class="fas fa-external-link-alt"></i></h5></a>
+              <h5 class="font-weight-light">{{ releases.last.title }}<i class="ml-2 fas fa-external-link-alt"></i></h5></a>
               <div><h5 class="font-weight-light" >by: {{ releases.last.artists }}</h5></div>
               <small><p class="mb-4 mt-1">{{ releases.last.date | date: "%b %-d, %Y" }}</p></small>
             </div>
