--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -108,9 +108,18 @@
           <div class="col-12 col-md-6 row mt-4 text-right px-0" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="1500">
             <div class="col-12 col-md-8 d-none d-md-block mt-2 pr-0">
               <h3>Latest Release:</h3>
-              <a target="_blank" class="text-white" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}">
-              <h5 class="font-weight-light">{{ releases.last.title }}<i class="ml-2 fas fa-external-link-alt"></i></h5></a>
-              <div><h5 class="font-weight-light" >by: {{ releases.last.artists }}</h5></div>
+              <a target="_blank" class="release-color" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}">
+                <style>
+                  .release-color {
+                    color: #00ffe9!important;
+                  }
+                  .release-color:hover {
+                    color: #fff!important;
+                  }
+                </style>
+                <h5 class="font-weight-light">{{ releases.last.title }}<i class="ml-1 fas fa-external-link-alt"></i></h5>
+              </a>
+              <div><h5 class="font-weight-light" >by {{ releases.last.artists }}</h5></div>
               <small><p class="mb-4 mt-1">{{ releases.last.date | date: "%b %-d, %Y" }}</p></small>
             </div>
             <div class="col-12 col-md-4 d-none d-md-block portfolio-block block-intro mt-2">
