--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -111,7 +111,7 @@
               <a target="_blank" class="release-color" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}">
                 <style>
                   .release-color {
-                    color: #00ffe9!important;
+                    color: #00ffe9;
                   }
                   .release-color:hover {
                     color: #fff!important;
