--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -306,7 +306,7 @@
         var cp = colorThief.getPalette($myImage[0], 8, 5);
         
         //Sets background to 3rd color in the palette.
-        $('release-color').attr('style', 'color: rgb('+cp[3][0]+','+cp[3][1]+','+cp[3][2]+') !important');
+        $(".release-color").attr("color","rgb('+cp[3][0]+','+cp[3][1]+','+cp[3][2]+') !important");
         console.log(cp);
       }
 
