--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -303,10 +303,11 @@
         var cp = colorThief.getPalette($myImage[0], 8, 5);
         
         //Sets background to 3rd color in the palette.
-        $(".release-color").attr("color","rgb('+cp[3][0]+','+cp[3][1]+','+cp[3][2]+')!important");
+        $('.release-color').css('color','rgb('+cp[3][0]+','+cp[3][1]+','+cp[3][2]+')');
         console.log(cp);
       }
-
+    </script>
+    <script>
       $(document).ready(function() {
         //Make sure image is loaded before running.
         colorChange();
