--- a/_layouts/index-test.html
+++ b/_layouts/index-test.html
@@ -129,6 +129,15 @@
         </div>
       </div>
     </section>
+    <span class="dot release-color0"></span>
+    <span class="dot release-color1"></span>
+    <span class="dot release-color2"></span>
+    <span class="dot release-color3"></span>
+    <span class="dot release-color4"></span>
+    <span class="dot release-color5"></span>
+    <span class="dot release-color6"></span>
+    <span class="dot release-color7"></span>
+    <span class="dot release-color8"></span>
     <section id="latest releases" class="bg-darkest">
       <div class="container text-secondary py-5 text-center" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Latest Music</h3>
@@ -305,6 +314,16 @@
         
         //Sets color to 4rd color in the palette.
         $('.release-color').css('color','rgb(0,'+cp[3][1]+','+cp[3][2]+')');
+
+        $('.release-color0').css('color','rgb('+cp[0][0]+','+cp[0][1]+','+cp[0][2]+')');
+        $('.release-color1').css('color','rgb('+cp[1][0]+','+cp[1][1]+','+cp[1][2]+')');
+        $('.release-color2').css('color','rgb('+cp[2][0]+','+cp[2][1]+','+cp[2][2]+')');
+        $('.release-color3').css('color','rgb('+cp[3][0]+','+cp[3][1]+','+cp[3][2]+')');
+        $('.release-color4').css('color','rgb('+cp[4][0]+','+cp[4][1]+','+cp[4][2]+')');
+        $('.release-color5').css('color','rgb('+cp[5][0]+','+cp[5][1]+','+cp[5][2]+')');
+        $('.release-color6').css('color','rgb('+cp[6][0]+','+cp[6][1]+','+cp[6][2]+')');
+        $('.release-color7').css('color','rgb('+cp[7][0]+','+cp[7][1]+','+cp[7][2]+')');
+        $('.release-color8').css('color','rgb('+cp[8][0]+','+cp[8][1]+','+cp[8][2]+')');
       }
     </script>
     <script>
