--- a/_layouts/index-test.html
+++ b/_layouts/index-test.html
@@ -302,6 +302,14 @@
     </section>
 {% include footer.html %}
 {% include scripts.html %}
+    <style>
+        .dot {
+            height: 25px;
+            width: 25px;
+            border-radius: 50%;
+            display: inline-block;
+        }
+    </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
     <script>
       function colorChange(){
@@ -315,15 +323,15 @@
         //Sets color to 4rd color in the palette.
         $('.release-color').css('color','rgb(0,'+cp[3][1]+','+cp[3][2]+')');
 
-        $('.release-color0').css('color','rgb('+cp[0][0]+','+cp[0][1]+','+cp[0][2]+')');
-        $('.release-color1').css('color','rgb('+cp[1][0]+','+cp[1][1]+','+cp[1][2]+')');
-        $('.release-color2').css('color','rgb('+cp[2][0]+','+cp[2][1]+','+cp[2][2]+')');
-        $('.release-color3').css('color','rgb('+cp[3][0]+','+cp[3][1]+','+cp[3][2]+')');
-        $('.release-color4').css('color','rgb('+cp[4][0]+','+cp[4][1]+','+cp[4][2]+')');
-        $('.release-color5').css('color','rgb('+cp[5][0]+','+cp[5][1]+','+cp[5][2]+')');
-        $('.release-color6').css('color','rgb('+cp[6][0]+','+cp[6][1]+','+cp[6][2]+')');
-        $('.release-color7').css('color','rgb('+cp[7][0]+','+cp[7][1]+','+cp[7][2]+')');
-        $('.release-color8').css('color','rgb('+cp[8][0]+','+cp[8][1]+','+cp[8][2]+')');
+        $('.release-color0').css('background-color','rgb('+cp[0][0]+','+cp[0][1]+','+cp[0][2]+')');
+        $('.release-color1').css('background-color','rgb('+cp[1][0]+','+cp[1][1]+','+cp[1][2]+')');
+        $('.release-color2').css('background-color','rgb('+cp[2][0]+','+cp[2][1]+','+cp[2][2]+')');
+        $('.release-color3').css('background-color','rgb('+cp[3][0]+','+cp[3][1]+','+cp[3][2]+')');
+        $('.release-color4').css('background-color','rgb('+cp[4][0]+','+cp[4][1]+','+cp[4][2]+')');
+        $('.release-color5').css('background-color','rgb('+cp[5][0]+','+cp[5][1]+','+cp[5][2]+')');
+        $('.release-color6').css('background-color','rgb('+cp[6][0]+','+cp[6][1]+','+cp[6][2]+')');
+        $('.release-color7').css('background-color','rgb('+cp[7][0]+','+cp[7][1]+','+cp[7][2]+')');
+        $('.release-color8').css('background-color','rgb('+cp[8][0]+','+cp[8][1]+','+cp[8][2]+')');
       }
     </script>
     <script>
