--- a/_layouts/index-test.html
+++ b/_layouts/index-test.html
@@ -42,7 +42,7 @@
             </div>
             <div class="col-12 col-md-4 d-none d-md-block portfolio-block block-intro mt-2">
               <div class="avatar mt-1 mr-0" style="border-radius:0px">
-                <img id="coverimage" src="https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg" alt="" width="120px" height="120px">
+                <img id="coverimage" src="https://bayzamusic.com/images/releases/2020/hold-on-to-me.jpg" alt="" width="120px" height="120px">
               </div>
             </div>
           </div>
